--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,131 @@
-﻿@{
+﻿ @{
     ViewData["Title"] = "Home Page";
 }
 
+
+
 <div class="text-center">
-    <h1 class="display-4">Inkasign Outlet</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+       
+      <img src="/img/carrusel1.jpeg" alt="" class="d-block w-100">                         
+    </div>
+    <div class="carousel-item">
+      <img src="/img/carrusel2.jpeg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="/img/carrusel3.jpeg" alt="" class="d-block w-100">
+      
+    </div>
+    <div class="carousel-item">
+      <img src="/img/carrusel4.jpeg" alt="" class="d-block w-100">
+      
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+</div>
+
+<br>
+<center><h5>Encuentra las mejores prendas al mejor precio</h5></center>
+<br>
+
+<h1>Prendas Destacadas</h1>
+<br>
+      <center><div class="row">
+       
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box">
+            <div><img src="/images/imagen22.jpeg" width="50%"></div>
+            <br>
+            
+            <h5>Polo Polnice Talla S</h5>
+            <h3>S/30</h3>
+            <br>
+            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
+            
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+          <div class="icon-box">
+            <div><img src="/images/imagen36.jpeg" width="50%"></div>
+            <br>
+            
+            <h5>Polo Talla Polnice S</h5>
+            <h3>S/25</h3>
+            <br>
+            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box">
+            <div><img src="/images/imagen20.jpeg" width="50%"></div>
+            <br>
+            
+            <h5>Polo Polnice Talla M</h5>
+            <h3>S/30</h3>
+            <br>
+            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box">
+            <div><img src="/images/imagen40.jpeg" width="50%"></div>
+            <br>
+            
+            <h5>Pantalon Buzo Polnice</h5>
+            <h3>S/70</h3>
+            <br>
+            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+          <div class="icon-box">
+            <div><img src="/images/imagen41.jpg" width="50%"></div>
+            <br>
+            
+            <h5>Pantalon Buzo Polnice</h5>
+            <h3>S/75</h3>
+            <br>
+            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box">
+            <div><img src="/images/imagen45.jpg" width="50%"></div>
+            <br>
+            
+            <h5>Pantalon Buzo Polnice</h5>
+            <h3>S/65</h3>
+            <br>
+            
+            <a class="btn btn-info" asp-action="Details" >Detalle</a>
+            <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
+            
+          </div>
+          
+          
+        </div>
+        
+
+      </div></center>
+
+  
