--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
        
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
-            <div><img src="/images/imagen22.jpeg" width="50%"></div>
+            <div><img src="/img/producto1.jpg" width="50%"></div>
             <br>
             
             <h5>Polo Polnice Talla S</h5>
@@ -58,7 +58,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-            <div><img src="/images/imagen36.jpeg" width="50%"></div>
+            <div><img src="/img/producto2.jpg" width="50%"></div>
             <br>
             
             <h5>Polo Talla Polnice S</h5>
@@ -71,7 +71,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
-            <div><img src="/images/imagen20.jpeg" width="50%"></div>
+            <div><img src="/img/producto3.jpg" width="50%"></div>
             <br>
             
             <h5>Polo Polnice Talla M</h5>
@@ -84,7 +84,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
-            <div><img src="/images/imagen40.jpeg" width="50%"></div>
+            <div><img src="/img/producto4.jpg" width="50%"></div>
             <br>
             
             <h5>Pantalon Buzo Polnice</h5>
@@ -97,7 +97,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-            <div><img src="/images/imagen41.jpg" width="50%"></div>
+            <div><img src="/img/producto5.jpg" width="50%"></div>
             <br>
             
             <h5>Pantalon Buzo Polnice</h5>
@@ -110,7 +110,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
-            <div><img src="/images/imagen45.jpg" width="50%"></div>
+            <div><img src="/img/producto6.jpg" width="50%"></div>
             <br>
             
             <h5>Pantalon Buzo Polnice</h5>
