--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,6 +13,10 @@
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
+    <li class="nav-item">
+
+        <a class="nav-link color" asp-area="" asp-controller="Proforma" asp-action="Index"><img src="/img/CC.png" class="img-fluid" alt="" width="20px" heigh="20px"> Carrito</a>
+    </li>
 }
 else
 {
