agregar catalogo productos

--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<Inkasign.Models.Producto>
 @{
-    ViewData["Title"] = "Catálogo Polnice";  
+    ViewData["Title"] = "Catalogo Inkasign Outlet";  
 }
 
 <form asp-controller="Catalogo" asp-action="Index">
