--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - appPolnice</title>
+    <title>@ViewData["Title"] - Inkasign</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/appPolnice.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Inkasign.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -63,7 +63,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - appPolnice - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
+            &copy; 2022 - Inkasign - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
            
         </div>
     </footer>
