--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,17 +9,17 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
        
-      <img src="/img/carrusel1.jpeg" alt="" class="d-block w-100">                         
+      <img src="/images/carrusel1.jpeg" alt="" class="d-block w-100">                         
     </div>
     <div class="carousel-item">
-      <img src="/img/carrusel2.jpeg" alt="" class="d-block w-100">
+      <img src="/images/carrusel2.jpeg" alt="" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="/img/carrusel3.jpeg" alt="" class="d-block w-100">
+      <img src="/images/carrusel3.jpeg" alt="" class="d-block w-100">
       
     </div>
     <div class="carousel-item">
-      <img src="/img/carrusel4.jpeg" alt="" class="d-block w-100">
+      <img src="/images/carrusel4.jpeg" alt="" class="d-block w-100">
       
     </div>
   </div>
@@ -44,7 +44,7 @@
        
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
-            <div><img src="/img/producto1.jpg" width="50%"></div>
+            <div><img src="/images/producto1.jpg" width="50%"></div>
             <br>
             
             <h5>Polo Polnice Talla S</h5>
@@ -58,7 +58,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-            <div><img src="/img/producto2.jpg" width="50%"></div>
+            <div><img src="/images/producto2.jpg" width="50%"></div>
             <br>
             
             <h5>Polo Talla Polnice S</h5>
@@ -71,7 +71,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
-            <div><img src="/img/producto6.jpg" width="50%"></div>
+            <div><img src="/images/producto6.jpg" width="50%"></div>
             <br>
             
             <h5>Polo Polnice Talla M</h5>
@@ -84,7 +84,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
-            <div><img src="/img/producto4.jpg" width="50%"></div>
+            <div><img src="/images/producto4.jpg" width="50%"></div>
             <br>
             
             <h5>Pantalon Buzo Polnice</h5>
@@ -97,7 +97,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-            <div><img src="/img/producto5.jpg" width="50%"></div>
+            <div><img src="/images/producto5.jpg" width="50%"></div>
             <br>
             
             <h5>Pantalon Buzo Polnice</h5>
@@ -110,7 +110,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
-            <div><img src="/img/producto6.jpg" width="50%"></div>
+            <div><img src="/images/producto6.jpg" width="50%"></div>
             <br>
             
             <h5>Pantalon Buzo Polnice</h5>
