--- a/Views/Proforma/Index.cshtml
+++ b/Views/Proforma/Index.cshtml
@@ -8,7 +8,7 @@
         Decimal montoTotal = @Model.montoTotal;
 }
 
-<h1><img src="/img/CC.png" class="img-fluid" alt="" width="45px" heigh="45px">     @ViewData["Title"]</h1>
+<h1><img src="/images/CC.png" class="img-fluid" alt="" width="45px" heigh="45px">     @ViewData["Title"]</h1>
 
 <h2>RESUMEN DE PEDIDO<h2/>
         <div class="container" >
@@ -41,9 +41,9 @@
                 @Html.DisplayFor(modelItem => item.Precio)                
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" style="font-size: 15px;"><img src="/img/editar.png" width="15px" heigh="15px"></a> 
+                <a asp-action="Edit" asp-route-id="@item.Id" style="font-size: 15px;"><img src="/images/editar.png" width="15px" heigh="15px"></a> 
                 
-                <a asp-action="Delete" asp-route-id="@item.Id" style="font-size: 15px;" onclick="return confirm('¿Desea eliminar el ítem del carrito?')"><img src="/img/eliminar.png" width="15px" heigh="15px"></a>
+                <a asp-action="Delete" asp-route-id="@item.Id" style="font-size: 15px;" onclick="return confirm('¿Desea eliminar el ítem del carrito?')"><img src="/images/eliminar.png" width="15px" heigh="15px"></a>
             </td>
         </tr>
 }
