--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
     </li>
     <li class="nav-item">
 
-        <a class="nav-link color" asp-area="" asp-controller="Proforma" asp-action="Index"><img src="/img/CC.png" class="img-fluid" alt="" width="20px" heigh="20px"> Carrito</a>
+        <a class="nav-link color" asp-area="" asp-controller="Proforma" asp-action="Index"><img src="/images/CC.png" class="img-fluid" alt="" width="20px" heigh="20px"> Carrito</a>
     </li>
 }
 else
