--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -35,10 +35,10 @@
 </div>
 
 <br>
-<center><h5>Encuentra las mejores prendas al mejor precio</h5></center>
+<h5><center>Encuentra las mejores prendas al mejor precio en Inkasign Outlet</h5></center>
 <br>
 
-<h1>Prendas Destacadas</h1>
+<h5><center>Prendas Destacadas</h5></center>
 <br>
       <center><div class="row">
        
@@ -47,10 +47,10 @@
             <div><img src="/images/producto1.jpg" width="50%"></div>
             <br>
             
-            <h5>Polo Polnice Talla S</h5>
-            <h3>S/30</h3>
+            <h5>Chompa Inkasign Talla M - Mujer</h5>
+            <h3>S/68</h3>
             <br>
-            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            
             <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
             
           </div>
@@ -61,10 +61,10 @@
             <div><img src="/images/producto2.jpg" width="50%"></div>
             <br>
             
-            <h5>Polo Talla Polnice S</h5>
-            <h3>S/25</h3>
+            <h5>Chompa Bividi Inkasign Talla M - Mujer</h5>
+            <h3>S/60</h3>
             <br>
-            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            
             <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
           </div>
         </div>
@@ -74,10 +74,10 @@
             <div><img src="/images/producto6.jpg" width="50%"></div>
             <br>
             
-            <h5>Polo Polnice Talla M</h5>
-            <h3>S/30</h3>
+            <h5>Chompa Inkasign Talla S - Mujer</h5>
+            <h3>S/70</h3>
             <br>
-            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            
             <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
           </div>
         </div>
@@ -87,10 +87,10 @@
             <div><img src="/images/producto4.jpg" width="50%"></div>
             <br>
             
-            <h5>Pantalon Buzo Polnice</h5>
+            <h5>Chompa Inkasign Talla M - Mujer</h5>
             <h3>S/70</h3>
             <br>
-            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            
             <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
           </div>
         </div>
@@ -100,10 +100,10 @@
             <div><img src="/images/producto5.jpg" width="50%"></div>
             <br>
             
-            <h5>Pantalon Buzo Polnice</h5>
+            <h5>Chompa Inkasign Talla S - Mujer</h5>
             <h3>S/75</h3>
             <br>
-            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            
             <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
           </div>
         </div>
@@ -113,11 +113,11 @@
             <div><img src="/images/producto6.jpg" width="50%"></div>
             <br>
             
-            <h5>Pantalon Buzo Polnice</h5>
-            <h3>S/65</h3>
+            <h5>Chompa Inkasign Talla M - Mujer</h5>
+            <h3>S/68</h3>
             <br>
             
-            <a class="btn btn-info" asp-action="Details" >Detalle</a>
+            
             <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
             
           </div>
