--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -50,9 +50,8 @@
             <h5>Polo Polnice Talla S</h5>
             <h3>S/30</h3>
             <br>
-            <a class="btn btn-info" asp-action="Details">Detalle</a>
+            <a class="btn btn-info" asp-controller="Catalogo" asp-action="Details">Detalle</a>
             <a class="btn btn-warning" asp-controller="Catalogo">Comprar</a>
-            
           </div>
         </div>
 
