--- a/Views/Proforma/Index.cshtml
+++ b/Views/Proforma/Index.cshtml
@@ -55,7 +55,7 @@
     <br>
     
 <center><p>Total S/. @montoTotal</p><a class="btn btn-primary" asp-controller="Pago"
-    asp-action="Create" asp-route-monto="@montoTotal">Continuar</a>
+    asp-action="Index" asp-route-monto="@montoTotal">Continuar</a>
     <br>
     <br>
     <center><div></center>
