--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -62,22 +62,13 @@
 
 <footer class="border-top footer text-muted">
         <div class="container">
-<<<<<<< HEAD
-            &copy; 2022 - appPolnice - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
+
+            2022 - appPolnice - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
             <a href="https://www.facebook.com/inkasign.outlet"><img align="right" VSPACE="20" HSPACE="20" src="/images/facebook.png" alt="" width="25px" heigh="25px"></a>
             <a href="https://www.instagram.com/inkasign.outlet/"><img align="right" VSPACE="20" src="/images/instagram.png" alt="" width="25px" heigh="25px"></a>
             
         </div>
 </footer>
-
-   
-=======
-            &copy; 2022 - Inkasign - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
-            
-        </div>
-    </footer>
-    
->>>>>>> e80af5b98ffa5f80a462c0a84837993ae33a2618
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
