--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,67 +1,52 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrar";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
+
+<div class="create mt-5">
+    
+        <form class="row" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            
+            <fieldset>
+
+            <h3 class="text-center" >Crear una nueva cuenta</h3>
+           
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="col-12 mb-3">
+                <label class="form-label" asp-for="Input.Email">Correo: </label>
+                <input asp-for="Input.Email" class="form-control tamaño" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
+            <div class="col-12 mb-3">
+                <label class="form-label" asp-for="Input.Password">Contraseña: </label>
+                <input asp-for="Input.Password" class="form-control tamaño" id="password"/>
+                <input type="checkbox" onclick="mostrarPassword('password')">Mostrar contraseña
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
+            <div class="col-12 mb-3">
+                <label class="form-label" asp-for="Input.ConfirmPassword">Confirmar Contraseña: </label>
+                <input asp-for="Input.ConfirmPassword" class="form-control tamaño" id="confirm"/>
+                <input type="checkbox" onclick="mostrarPassword('confirm')">Mostrar contraseña
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+           
+           <div class="text-center mt-5">
+ 
+            <button type="submit" class="btn btn-info">Registrar</button>
+
+            </div>
+
+            </fieldset>
+
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+       
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script src="~/js/script.js"></script>
