--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
     IdentityUser myidentity = await Task.Run(() => UserManager.GetUserAsync(User));
     var roles = await Task.Run(() => UserManager.GetRolesAsync(myidentity));
 
-    @if(roles.Contains("Admin")){
+    @if(roles.Contains("Admin") || roles.Contains("Admin2")){
 
         <li class="nav-item">
 
