--- a/Views/Shared/_Administrador.cshtml
+++ b/Views/Shared/_Administrador.cshtml
@@ -19,7 +19,7 @@
     <input type="checkbox" id="nav-toggle">
     <div class="sidebar">
         <div class="sidebar-brand" style="background-color: white;">
-           <a asp-controller="Home" asp-action="Index"> <img src="~/img/ajinomoto.png" height="90%" width="40%" /> </a>
+           <a asp-controller="Home" asp-action="Index"> <img src="~/images/logo.jpg" height="100px" width="100px" /> </a>
         </div>
        
        
