--- a/Views/Shared/_Administrador.cshtml
+++ b/Views/Shared/_Administrador.cshtml
@@ -19,11 +19,12 @@
     <input type="checkbox" id="nav-toggle">
     <div class="sidebar">
         <div class="sidebar-brand" style="background-color: white;">
-           <a asp-controller="Home" asp-action="Index"> <img src="~/images/logo.jpg" height="100px" width="100px" /> </a>
+           <a asp-controller="Home" asp-action="Index"> <img src="~/images/logo.jpg" height="68" width="60" /> </a>
         </div>
        
        
         <hr>
+      
 
         <!--Secciones-del-tablero-->
         <div class="sidebar-menu">
