--- a/Views/Contacto/Contacto.cshtml
+++ b/Views/Contacto/Contacto.cshtml
@@ -9,7 +9,7 @@
     <h1 class="display-4">Contáctanos</h1>
 
 
-    <form asp-controller="Contacto" asp-action="Create">
+    <form asp-controller="Contacto">
         <label asp-for="Name" class="form-label"></label>
         <input asp-for="Name" class="form-control form-control-sm" type="text" placeholder="Escribe un nombre" aria-label=".form-control-sm" />
 
