--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -33,7 +33,7 @@
                   <p class="card-text">@Html.DisplayFor(modelItem => item.Precio)</p>
 
 
-                  <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Agregar</a>
+                  <a class="btn btn-primary" asp-action="Agregar" asp-route-id="@item.Id">Agregar</a>
 
                   <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Visualizar</a>
                 </div>
