--- a/Views/Contacto/Contacto.cshtml
+++ b/Views/Contacto/Contacto.cshtml
@@ -10,17 +10,17 @@
 
 
     <form asp-controller="Contacto">
-        <label asp-for="Name" class="form-label"></label>
-        <input asp-for="Name" class="form-control form-control-sm" type="text" placeholder="Escribe un nombre" aria-label=".form-control-sm" />
+        <label asp-for="Nombre" class="form-label"></label>
+        <input asp-for="Nombre" class="form-control form-control-sm" type="text" placeholder="Escribe un nombre" aria-label=".form-control-sm" />
 
-        <label asp-for="Email" class="control-label"></label>
-        <input asp-for="Email" class="form-control" placeholder="Ingresa tu email" />
+        <label asp-for="Correo" class="control-label"></label>
+        <input asp-for="Correo" class="form-control" placeholder="Ingresa tu email" />
 
-        <label asp-for="Subject" class="control-label"></label>
-        <input asp-for="Subject" class="form-control" />
+        <label asp-for="Asunto" class="control-label"></label>
+        <input asp-for="Asunto" class="form-control" />
 
-        <label asp-for="Comment" class="control-label"></label>
-        <input asp-for="Comment" class="form-control" placeholder="Ingresa un comentario"/>
+        <label asp-for="Comentario" class="control-label"></label>
+        <input asp-for="Comentario" class="form-control" placeholder="Ingresa un comentario"/>
 
         <br>
 
