--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -24,8 +24,8 @@
               <div class="card mb-3">
                 <div class="card-body">
                   <div class="card-img-actions">
-                    <img class="img-responsive" width="300" height="360"
-                       src="/images/@item.ImageName" alt="@item.ImageName"  />
+                    <center><img class="img-responsive" width="150" height="200"
+                       src="/images/@item.ImageName" alt="@item.ImageName"  /></center>
                   </div>
                 </div>
                 <div class="card-body">
