--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "Iniciar Sesión";
 }
 
+<section id="content">
+
 <div class="create mt-5">
         <form id="account" method="post">
             
@@ -55,6 +57,7 @@
         </form>
 </div>
 
+</section>
 
 
 @section Scripts {
