--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Registrar";
 }
 
-
+<section id="content">
 
 <div class="create mt-5">
     
@@ -44,6 +44,8 @@
         </form>
        
 </div>
+
+</section>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
