--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 
+<div class="general_home">
 
 <div class="text-center">
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -126,5 +127,9 @@
         
 
       </div></center>
+
+      </div>
+
+      
 
   
