--- a/Views/Nosotros/Index.cshtml
+++ b/Views/Nosotros/Index.cshtml
@@ -13,10 +13,9 @@
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
               <h3>INFORMACIÓN ACERCA DE LA EMPRESA</h3><br>
+              <img id="img1" src="/images/inkasig-oullet_img1.jpg">
               <p>
-                Somos una empresa que se dedica a la venta de prendas para hombres, ofreciendo una gran variedad de prendas de calidad y al mejor precio.
-                Ofrecemos un amplio contenido en diferentes tipos de prendas, como pantalones, polos, camisas, joggers, entre otros. El objetivo que tenemos como empresa es 
-                ofrecer ropa de mejor calidad satisfaga las  necesidades y gustos del mercado potencial, ademas de vender ropa a la moda que cumpla con los requerimientos de estilo en el segmento del mercado.
+                Elaboración de prendas y accesorios en fibra de alpaca, algodón orgánico y mezclas. Con un servicio personalizado, y además nuestra maquinaria ecológica de última generación es respetuosa con el medio ambiente, capaz de producir hasta 120 000 prendas al año.
               </p>
             </div>
           </div>
@@ -27,12 +26,9 @@
           <p>
                 <center><h4>HISTORIA  </h4></center>
               </p>
-              
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio magnam voluptatem excepturi molestiae, similique hic minus possimus minima blanditiis culpa aliquam ducimus sed adipisci tempore nisi esse libero, omnis reiciendis.
               <p>
-                Polnice fue creado en el año 2015 , en un principio se contaba con un local presencial que poco a poco se fue extendiendo, conforme pasaban los años se abrio 3 locales nuevios en zonas estrategicas de la ciudad.
-Llegada la pandemia se recurrio a las plataformas virtuales de manera inmediata y casi sin otra salida para sacar adelante la empresa.
-Sin embargo la llegada del fanpage y publicidad mediante facebook obtuvo resultados inmediatos, para favorecer las ventas.
-Hoy en dia estamos posicionados en el mercado de ropa para hombres, y con la meta de extender locales a nivel nacional para seguir el crecimiento de la empresa en nuestro pais.
+                
               </p>
               <br>
           <br>
@@ -43,7 +39,7 @@ Hoy en dia estamos posicionados en el mercado de ropa para hombres, y con la met
               <div class="row">
                 <div class="col-lg-5 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
                   <p>
-                    <center><h5>Misión:</h5></center> Ofrecer a nuestros clientes  productos de calidad, a precios cómodos  que cumplan con sus necesidades y exigencias, abarcando sus gustos de acuerdo a su estilo de ver y vivir la vida.
+                    <center><h5>Misión:</h5></center> La venta de saldos que busca vender prendas de calidad a un precio accesible al publico local.
                   </p>
                 </div>
                 <div class="col-lg-7 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
