--- a/Views/Contacto/Index.cshtml
+++ b/Views/Contacto/Index.cshtml
@@ -4,23 +4,25 @@
     ViewData["Title"] = "Contacto";
 }
 
+<section id="content">
+
 <fieldset class="form"> 
-<div class="text-center">
+<div class="text-center" class-border>
     <h1 class="display-4">Contáctanos</h1>
 
 
     <form asp-controller="Contacto" asp-action="Create">
-        <label asp-for="Name" class="form-label"></label>
-        <input asp-for="Name" class="form-control form-control-sm" type="text" placeholder="Escribe un nombre" aria-label=".form-control-sm" />
+        <label asp-for="Nombre" class="form-label"></label>
+        <input asp-for="Nombre" class="form-control form-control-sm" type="text" placeholder="Escribe un nombre" aria-label=".form-control-sm" />
 
-        <label asp-for="Email" class="control-label"></label>
-        <input asp-for="Email" class="form-control" placeholder="Ingresa tu email" />
+        <label asp-for="Correo" class="control-label"></label>
+        <input asp-for="Correo" class="form-control" placeholder="Ingresa tu email" />
 
-        <label asp-for="Subject" class="control-label"></label>
-        <input asp-for="Subject" class="form-control" />
+        <label asp-for="Asunto" class="control-label"></label>
+        <input asp-for="Asunto" class="form-control" />
 
-        <label asp-for="Comment" class="control-label"></label>
-        <input asp-for="Comment" class="form-control" placeholder="Ingresa un comentario"/>
+        <label asp-for="Comentario" class="control-label"></label>
+        <input asp-for="Comentario" class="form-control" placeholder="Ingresa un comentario"/>
 
         <br>
 
@@ -37,3 +39,5 @@
 </div>
 
 </fieldset>
+
+</section>
